// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unset multiple 1`] = `
Program {
  "children": Array [
    Unset {
      "kind": "unset",
      "variables": Array [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      ],
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`unset simple 1`] = `
Program {
  "children": Array [
    Unset {
      "kind": "unset",
      "variables": Array [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      ],
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`unset trailing comma #2 1`] = `
Program {
  "children": Array [
    Unset {
      "kind": "unset",
      "variables": Array [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
      ],
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`unset trailing comma 1`] = `
Program {
  "children": Array [
    Unset {
      "kind": "unset",
      "variables": Array [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
      ],
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
